syntax = "proto3";

option go_package = "teleport-job-worker/api/proto/job";
package job;

message StartRequest {
  job.Command command = 1;
  job.Resources resource_limits = 2;
}

message StopRequest {
  string id = 1;
}

message QueryRequest {
  string id = 1;
}

message OutputRequest {
  string id = 1;
}

message Resources {
  uint64 memory_bytes = 1; // Amount of memory in bytes that a job can use
  int32 cpu_percentage = 2; // Percentage of CPU that a job can use
  int32 disk_io_bps = 3; // Bytes per second a job can use on a disk; this value is applied separately to writes and reads
}

message Response {
  job.Info info = 1;
  job.Resources resource_limits = 2;
}

message OutputResponse {
  bytes stdout = 1;
  bytes stderr = 2;
}

message Info {
  string id = 1;
  job.Status status = 2;
  uint64 start_time = 3; // Time the job started in number of milliseconds since the epoch
  uint64 finish_time = 4; // Time the job stopped in number of milliseconds since the epoch
  job.Command command = 5;
  string status_info = 6; // Information about the current job status; may be empty
}

message Command {
  string name = 1; // Name of the command to execute
  repeated string args = 2; // Command arguments
  uint64 start_time = 3; // Time the command started in number of milliseconds since the epoch
  uint64 finish_time = 4; // Time the command stopped in number of milliseconds since the epoch
}

enum Status {
  RUNNING = 0; // Intermediate status of a job during the execution of a command
  STOPPED = 1; // Terminal status for when a job is stopped by a user
  FAILED = 2; // Terminal status for when a job's process returns a non-zero exit code
  SUCCESS = 3; // Terminal status for when a job's process returns an exit code of zero
  READY = 4; // Initial job status before the command has begun execution
}

service Job {
  // Start a new job and begin execution of the specified command immediately
  rpc Start(job.StartRequest) returns (job.Response) {}
  // Stop execution of the specified job immediately
  rpc Stop(job.StopRequest) returns (job.Response) {}
  // Query details about specified job; this function can run on a job of any status
  rpc Query(job.QueryRequest) returns (job.Response) {}
  // Get the full output (stdout and stderr) of any existing job
  rpc Output(job.OutputRequest) returns (stream job.OutputResponse) {}
}
